# fts5-icu-tokenizer

./: .clang-format  .hgtags  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.md.backup
docs/: BUILD_TEST_README.md  DEFAULT_IMPLEMENTATION_UPDATE.md  FTS5_API_IMPLEMENTATION.md  FTS5_COMPLIANCE_SUMMARY.md  FTS5_V2_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  README_UPDATES.md  SCRIPTS_REFERENCE.md
scripts/: build.sh  build_all.sh  build_all_with_clang.sh  build_test.sh  code-format.sh  demo.sh  lint-check.sh  run_test.sh  test.sh  test_all.sh
src/: fts5_icu.c  fts5_icu.h  fts5_icu_common.h  fts5_icu_v2.c  locale_specific_tests.c  test_locale_tokenizer.c  test_transliterator.c
tests/: test_ar_tokenizer.sql  test_el_tokenizer.sql  test_he_tokenizer.sql  test_ja_tokenizer.sql  test_ko_tokenizer.sql  test_ru_tokenizer.sql  test_th_tokenizer.sql  test_universal_tokenizer.sql  test_universal_with_th_zh.sql  test_zh_tokenizer.sql
